--- a/prerequisite.Rmd
+++ b/prerequisite.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Prerequisite exercises"
-output: html_document
+output:
+  distill::distill_article:
+    toc: false
 ---
 
 ```{r setup, include=FALSE}
